--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "author": "Defra DDTS",
   "license": "OGL-UK-3.0",
   "dependencies": {
+    "@azure/msal-node": "2.9.2",
     "@babel/runtime": "7.24.4",
     "@elastic/ecs-pino-format": "1.5.0",
     "@hapi/boom": "10.0.1",
