Updated code for delta link with schedule job

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,13 +21,14 @@
   },
   "plugins": ["prettier", "jest", "jest-formatting"],
   "rules": {
-    "prettier/prettier":[ "error",
-    {
-      "singleQuote": true,
-         "parser": "flow" ,
-         "prettier/prettier": "error"
-    }
-  ],
+    "prettier/prettier": [
+      "error",
+      {
+        "singleQuote": true,
+        "parser": "flow",
+        "prettier/prettier": "error"
+      }
+    ],
     "no-console": "error"
   },
   "ignorePatterns": [".server", ".public", "src/__fixtures__", "coverage"]
