update sonar project file

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,8 @@ sonar.links.scm=https://github.com/DEFRA/disinfectant-backend
 sonar.links.issue=https://github.com/DEFRA/disinfectant-backend/issues
 
 sonar.sources=src/
-sonar.exclusions=src/**/*.test.js
+sonar.exclusions=src/**/*.test.jsc
+sonar.exclusions=src/helpers/metrics.js
 
 sonar.tests=src/
 sonar.test.inclusions=src/**/*.test.js
