--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -22,6 +22,6 @@ sonar.exclusions=src/api/health/index.js
 sonar.exclusions=src/api/health/controller.test.js
 sonar.tests=src/helpers/fetchProxyWrapper.js
 sonar.tests=src/helpers/fail-action.js
-sonar.tests=src/helpers/secure-context/*
+sonar.tests=src/helpers/secure-context/secure-context.js
 sonar.test.inclusions=src/**/*.test.js
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
