update sonar properties file

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,21 +9,11 @@ sonar.links.scm=https://github.com/DEFRA/disinfectant-backend
 sonar.links.issue=https://github.com/DEFRA/disinfectant-backend/issues
 
 sonar.sources=src/
-sonar.exclusions=src/**/*.test.jsc
-sonar.exclusions=src/helpers/metrics.js
+sonar.exclusions=src/**/*.test.jsc,src/**/metrics.js,src/**/schema/**,src/**/health/**,**/secure-context/**
+
 sonar.test.inclusions=src/**/*.test.js
 
 sonar.test.exclusions=src/helpers/metrics.js
-sonar.test.exclusions=src/schema/contacts.js
-sonar.test.exclusions=src/schema/developmentSite.js
-sonar.test.exclusions=src/schema/disinfectantApprovedList.js
-sonar.test.exclusions=src/schema/OrganizationNContact.js
-sonar.test.exclusions=src/schema/organizations.js
-sonar.test.exclusions=src/schema/upload.js
-sonar.test.exclusions=src/api/health/controller.js
-sonar.test.exclusions=src/api/health/index.js
-sonar.test.exclusions=src/api/health/controller.test.js
-sonar.test.exclusions=src/helpers/fetchProxyWrapper.js
-sonar.test.exclusions=src/helpers/fail-action.js
-sonar.test.exclusions=src/helpers/secure-context/secure-context.js
+
+
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
