--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,11 +9,12 @@ sonar.links.scm=https://github.com/DEFRA/disinfectant-backend
 sonar.links.issue=https://github.com/DEFRA/disinfectant-backend/issues
 
 sonar.sources=src/
-sonar.exclusions=src/**/*.test.jsc,src/**/metrics.js,src/**/schema/**,src/**/health/**,**/secure-context/**
+sonar.exclusions=src/**/*.test.jsc,src/helpers/metrics.js,**/schema/**,**/health/**,**/secure-context/**
 
 sonar.test.inclusions=src/**/*.test.js
 
-sonar.test.exclusions=src/helpers/metrics.js
+
+
 
 
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
