--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.links.scm=https://github.com/DEFRA/disinfectant-backend
 sonar.links.issue=https://github.com/DEFRA/disinfectant-backend/issues
 
 sonar.sources=src/
-sonar.exclusions=src/**/*.test.jsc,src/helpers/metrics.js,**/schema/**,**/health/**,**/secure-context/**
+sonar.exclusions=src/**/*.test.jsc,src/helpers/metrics.js,**/schema/**,**/health/**,**/secure-context/**,src/helpers/fetchProxyWrapper.js,src/helpers/fail-actions.js
 
 sonar.test.inclusions=src/**/*.test.js
 
