--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,6 +22,8 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
+        with: 
+          fetch-depth: 0
 
       - name: Build and Publish
         uses: DEFRA/cdp-build-action/build@main
