updated the sonar project properties file

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,7 @@ sonar.exclusions=src/**/*.test.jsc,src/helpers/metrics.js,**/schema/**,**/health
 #sonar.exclusions=src/**/*.test.jsc,src/helpers/metrics.js,**/schema/**,**/health/**,**/secure-context/**,src/helpers/fetchProxyWrapper.js,src/helpers/fail-actions.js
 
 #sonar.test.inclusions=src/**/*.test.js,src/helpers/databaseTransaction.js
-sonar.test.inclusions=src/api/dataverse/controller.js ,src/api/health/controller.js
+sonar.test.inclusions=src/**/*.test.js,
 
 
 
