--- a/.github/workflows/check-pull-request.yml
+++ b/.github/workflows/check-pull-request.yml
@@ -27,12 +27,12 @@ jobs:
       - run: npm run format:check
       - run: npm run lint
       - run: npm test
-      - name: SonarCloud Scan
-        if: github.actor != 'dependabot[bot]'
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          AZ_TENANT_ID: ${{ secrets.AZ_TENANT_ID_DEV}}
-          AZ_CLIENT_ID: ${{ secrets.AZ_CLIENT_ID_DEV}}
-          AZ_CLIENT_SECRET: ${{ secrets.AZ_CLIENT_SECRET_DEV}}
+      #- name: SonarCloud Scan
+       # if: github.actor != 'dependabot[bot]'
+        #uses: SonarSource/sonarcloud-github-action@master
+        #env:
+         # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          #SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          #AZ_TENANT_ID: ${{ secrets.AZ_TENANT_ID_DEV}}
+          #AZ_CLIENT_ID: ${{ secrets.AZ_CLIENT_ID_DEV}}
+          #AZ_CLIENT_SECRET: ${{ secrets.AZ_CLIENT_SECRET_DEV}}
